<resources>
    <string name="app_name">Sharity</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Sharity</string>
    <string name="start_sharing">Start Sharing</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Welcome to Sharity</string>
    <string name="copyright">by Daniël, Rob en Bart</string>
    <string name="logo_sharity">Sharity Logo</string>
    <string name="background_sharity_application">Breda map</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_to_sharity">New to Sharity?</string>
    <string name="sign_in">Sign in</string>
    <string name="new_customer">New Customer</string>
    <string name="add_drivers_license">Add Drivers License</string>
    <string name="add_bankaccount">Add Bank Account</string>
    <string name="my_account">My Account</string>
    <string name="search_cars">Search Cars</string>
    <string name="search_results">Search Results</string>
    <string name="car_details">Car Details</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="personal_details">Personal details</string>
    <string name="my_details">My Details</string>
    <string name="bankaccount">Bankaccount</string>
    <string name="drivers_license">Drivers License</string>
    <string name="update_drivers_license">Update Drivers License</string>
    <string name="my_cars">My cars</string>
    <string name="update_car">Update car</string>
    <string name="add_car">Add car</string>
    <string name="my_reservations">My reservations</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="update_reservation">Update Reservation</string>
    <string name="action_logout">Logout</string>
    <string name="make_reservation">make reservation</string>
    <string name="contact">Contact</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="house_number">House number</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="house_number_short">Nr.</string>
    <string name="create_your_sharity_account">Create your Sharity Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">next</string>
    <string name="show_password">Show password</string>
    <string name="login_instead">Login instead</string>
    <string name="zip_code">PC</string>
    <string name="create_account">Create account</string>
    <string name="license_number">License number</string>
    <string name="valid_until">Valid until</string>
    <string name="image_license">image_license</string>
    <string name="camera">Camera</string>
    <string name="picture_drivers_license">Add a photo of the front of your drivers license to your account. Without your drivers license it\'s impossible to create an account.</string>
    <string name="iban">IBAN</string>
    <string name="account_name">Name account holder</string>
    <string name="date">reservation startdate</string>
    <string name="select_car">select car</string>
    <string name="select_kmPackage">select kmPackage</string>
    <string name="confirm">Confirm Pay now</string>
    <string name="confirm_pay_later">confirm pay later</string>
    <string name="contact_details">Contact details</string>
    <string name="postal_code_city">Postal code / city</string>
    <string name="edit">Edit</string>
    <string name="license">License</string>
    <string name="profile_image_demo">profile_image_demo</string>
    <string name="bankaccount_details">My bankaccounts</string>
    <string name="details_not_correct">Details not correct?</string>
    <string name="edit_details">Edit details</string>
    <string name="bank">bank</string>
    <string name="personal">Personal</string>
    <string name="drivers_license_details">My drivers license</string>
    <string name="copy_bankcard">Copy bankcard:</string>
    <string name="copy_license">Copy drivers license:</string>
    <string name="drivers_license_jpeg">drivers_license.jpeg</string>
    <string name="electric">Electric</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="petrol">Petrol</string>
    <string name="any">Any</string>
    <string name="sharity_email">info@sharity.nl</string>
    <string name="sharity_email_subject">Contact by customer number:</string>
    <string name="car_image">car_image</string>
    <string name="EndDate">end date</string>
    <string name="get">get</string>
    <string name="delete">Delete</string>
    <string name="post">add</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="edit_bankaccount">Change bankaccount</string>
    <string name="account_holder">Account holder</string>
    <string name="image_bankaccount">image_bankaccount</string>
    <string name="save">save</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="car_location">Location</string>
    <string name="car_price">Price</string>
    <string name="price_per_km">Price per km</string>
    <string name="owner_details">Owner details</string>
    <string name="rent">Rent</string>
    <string name="locate">Locate</string>
    <string name="reservation_start">Reservation start</string>
    <string name="reservation_end">Reservation end</string>
    <string name="reservation_date">Reservation date</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="license_plate">License plate</string>
    <string name="km_package">Km package</string>
    <string name="km_package_price">Package price</string>
    <string name="total_price">Total price</string>
    <string name="payment_status">Payment status</string>
    <string name="pick_date">Pick date</string>
    <string name="add">Add</string>
    <string name="passwords_not_matching">Passwords not matching</string>
    <string name="email_already_in_db">Email address already exists</string>
    <string name="password_empty">Password not filled</string>
    <string name="email_empty">Email not filled</string>
    <string name="password_char_error">Password must have at least 8 characters</string>
    <string name="password_email_empty">Password and/or email empty</string>
    <string name="password_email_incorrect">Password and/or email incorrect</string>
    <string name="email_regex_error">Email does not meet the requirements</string>
    <string name="all_fields_required">All fields have to be filled</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="netherlands">Netherlands</string>
    <string name="belgium">Belgium</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="license_already_database">License connected to another account</string>
    <string name="update_account">Update personal details</string>
    <string name="change_account">Change your account details?</string>
    <string name="pricing">Pricing</string>
    <string name="batteryfuelusage">Battery / fuel usage</string>
    <string name="capacityandfueltank">Capacity / fueltank</string>
    <string name="total_range">Total range</string>
    <string name="price_per_day">Price per day</string>
    <string name="fueltype">Fuel type</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="size_fueltank">Size fueltank</string>
    <string name="range_per_kw">Range per kW</string>
    <string name="range_per_kilo">Range per kilo</string>
    <string name="range_per_liter">Range per liter</string>
    <string name="km_per_kilo_hydrogen">%1$s km per kilo hydrogen</string>
    <string name="km_per_liter_fuel">%1$s km per liter %2$s</string>
    <string name="km_per_kw_range">%1$s km per kW</string>
    <string name="km">%1$s km</string>
    <string name="kw">%1$s kW</string>
    <string name="kilo">%1$s kilo hydrogen</string>
    <string name="liter">%1$s liter</string>
    <string name="eur">€ %1$s</string>
    <string name="edit_price">Change price?</string>
    <string name="delete_car">Delete car?</string>
    <string name="car_type">Car type:</string>
    <string name="fuel">Fuel</string>
    <string name="cancel">Cancel</string>
    <string name="usage">usage</string>
    <string name="capacity">capacity</string>
    <string name="battery_capacity_inkW">Battery capacity in kW</string>
    <string name="km_per_kw">Km per kW</string>
    <string name="km_per_kilo">Km per kilo</string>
    <string name="km_per_liter">Km per liter</string>
    <string name="add_cartype_car">Add %1$s car</string>
    <string name="check">check</string>
    <string name="field_error">All fields have to be filled!</string>
    <string name="rent_price">Rentprice</string>
    <string name="reservation_enddate">reservation enddate</string>
    <string name="reservation_startdate">reservation startdate</string>
    <string name="reservationnumber">Reservationnumber</string>
    <string name="Language_preference">Languagepreference</string>
    <string name="Defaultlanguage">Default language</string>
    <string name="LanguageSettings">Language settings</string>
    <string name="ShowCarOnMap">car location</string>
    <string name="dateAndPrice">Date and Price</string>
    <string name="start_date">Start rental</string>
    <string name="end_date">End rental</string>
    <string name="car_license">License</string>
    <string name="payNow">Pay now</string>
    <string name="payLater">Pay later</string>
    <string name="yourcarishere">Your rentalcar is here!</string>
    <string name="turned_off_permissions">It looks like you have turned off permissions</string>
    <string name="todo">TODO</string>
    <string name="add_from_camera_or_gallery">Add picture from camera or gallery?</string>
    <string name="gallery">Gallery</string>
    <string name="dont_forget">(don\'t forget the photo)</string>
    <string name="update_bankaccount">update bankaccount</string>
    <string name="create_account_password_textview"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="bankaccount_title">Bankaccount:</string>
    <string name="change">change</string>
    <string name="language">language</string>
    <string name="Language_settings">Language settings</string>
    <string name="Default_language">Default language</string>
    <string name="languagepreference">language preference</string>
    <string name="youarehere">You are here!</string>
    <string name="per_km">per km</string>
    <string name="per_day">per day</string>
    <string name="location_unknown">Location unknown</string>
    <string name="cartype_not_found">Cartype not found</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="select_email_account">Select your mail account to send mail for Approval</string>
    <string name="switch_mode">switch mode</string>
    <string name="delete_bankaccount">Remove bankaccount from your account?</string>
    <string name="update">Update</string>
    <string name="update_bankaccount_dialog">Change your bankaccount details?</string>
    <string name="add_bankaccount_dialog">Add new bankaccount to your account?</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="no_cars_matched">No cars matched your criteria</string>
    <string name="photo_from_gallery">Select photo from gallery</string>
    <string name="photo_from_camera">Capture photo from camera</string>
    <string name="set_start_end_date">Start and enddate required</string>
    <string name="select_date">Select date</string>
    <string name="rentaldates">Start date: %1$s \n End date: %2$s</string>
    <string name="select_action">Select action</string>
    <string name="balance">Balance in account</string>
    <string name="image">image</string>
    <string name="pay">pay</string>
    <string name="paid">PAID</string>
    <string name="rent_car">rent car</string>
    <string name="_500">500</string>
    <string name="must_be_more">Km package must be more then zero</string>

    <string-array name="country_list">
        <item>NETHERLANDS</item>
        <item>BELGIUM</item>
        <item>LUXEMBOURG</item>
    </string-array>

    <string-array name="fueltypes">
        <item>PETROL</item>
        <item>LPG</item>
        <item>DIESEL</item>
    </string-array>
</resources>