...
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/account_holder" />


    <Button
        android:id="@+id/btn_add_bankaccount"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_car_rental_24"
        android:text="@string/start_sharing"
        app:layout_constraintBottom_toBottomOf="parent"
...
